# dropboxignore

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: post-v0.2-followups.md  v0.2-simplification-followups.md
docs/release-notes/: v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md
docs/superpowers/plans/: 2026-04-20-dropboxignore-implementation.md  2026-04-21-dropboxignore-v0.2-linux-followups.md  2026-04-21-dropboxignore-v0.2-linux.md  2026-04-22-dropboxignore-negation-polish-followups.md  2026-04-22-dropboxignore-negation-semantics.md  2026-04-23-v0.3-dbxignore-rename.md
docs/superpowers/specs/: 2026-04-21-dropboxignore-negation-semantics.md  2026-04-21-dropboxignore-v0.2-linux.md  2026-04-23-v0.3-dbxignore-rename.md
pyinstaller/: dbxignore.spec  dropboxignore.spec
src/dbxignore/: __main__.py  cli.py  daemon.py  debounce.py  markers.py  reconcile.py  roots.py  rules.py  state.py
src/dbxignore/install/: __init__.py  linux_systemd.py  windows_task.py
src/dropboxignore/: __main__.py  ads.py  cli.py  daemon.py  markers.py  reconcile.py  roots.py  rules.py  state.py
src/dropboxignore/_backends/: linux_xattr.py  windows_ads.py
src/dropboxignore/install/: __init__.py  linux_systemd.py  windows_task.py
tests/: conftest.py  test_ads_integration.py  test_ads_unit.py  test_cli_apply.py  test_cli_enotsup.py  test_cli_status_list_explain.py  test_daemon_dispatch.py  test_daemon_logging.py  test_daemon_singleton.py  test_daemon_smoke.py  test_daemon_smoke_linux.py  test_daemon_sweep.py  test_debounce.py  test_install.py  test_linux_reconcile_smoke.py  test_linux_systemd.py  test_linux_xattr_integration.py  test_markers_facade.py  test_reconcile_basic.py  test_reconcile_edges.py  test_reconcile_enotsup.py  test_reconcile_return_state.py  test_roots.py  test_rules_basic.py  test_rules_case_and_protection.py  test_rules_concurrency.py  test_rules_conflicts.py  test_rules_hierarchical.py  test_rules_load_caching.py  test_rules_reload_explain.py  test_smoke.py  test_state.py  test_windows_ads_integration.py
